--- a/fragmentation/build.gradle
+++ b/fragmentation/build.gradle
@@ -8,6 +8,11 @@ android {
         minSdkVersion 14
         targetSdkVersion 22
     }
+
+    lintOptions {
+        abortOnError false
+    }
+
 }
 
 dependencies {
