--- a/fragmentation/build.gradle
+++ b/fragmentation/build.gradle
@@ -17,4 +17,5 @@ android {
 
 dependencies {
     provided 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.github.zhaokaiqiang.klog:library:1.4.0'
 }
