--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest package="me.yokeyword.sample"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <application
+    <application android:name=".App"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
